--- a/Ansible/ansible_collections/jfrog/platform/group_vars/all/vars.yml
+++ b/Ansible/ansible_collections/jfrog/platform/group_vars/all/vars.yml
@@ -5,9 +5,7 @@ master_key: ee69d96880726d3abf6b42b97d2ae589111ea95c2a8bd5876ec5cd9e8ee34f86
 join_key: 83da88eaaa08dfed5b86888fcec85f19ace0c3ff8747bcefcec2c9769ad4043d
 
 jfrog_url: >-
-    {%- for host in groups['artifactory_servers'] -%}
-        "http://{{ hostvars[host]['ansible_host'] }}:8082"
-    {%- endfor -%}
+  "http://{{ hostvars[groups['artifactory_servers'][0]]['ansible_host'] }}:8082"
 
 ## Products enabled
 artifactory_enabled: true
@@ -23,9 +21,7 @@ artifactory_db_name: artifactory
 artifactory_db_user: artifactory
 artifactory_db_password: password
 artifactory_db_url: >-
-    {%- for item in groups['postgres_servers'] -%}
-        jdbc:postgresql://{{ hostvars[item]['ansible_host'] }}:5432/{{ artifactory_db_name }}
-    {%- endfor -%}
+  jdbc:postgresql://{{ hostvars[groups['postgres_servers'][0]]['ansible_host'] }}:5432/{{ artifactory_db_name }}
 
 # Xray DB details
 xray_db_type: postgresql
@@ -34,9 +30,7 @@ xray_db_name: xray
 xray_db_user: xray
 xray_db_password: password
 xray_db_url: >-
-    {%- for item in groups['postgres_servers'] -%}
-        postgres://{{ hostvars[item]['ansible_host'] }}:5432/{{ xray_db_name }}?sslmode=disable
-    {%- endfor -%}
+  postgres://{{ hostvars[groups['postgres_servers'][0]]['ansible_host'] }}:5432/{{ xray_db_name }}?sslmode=disable
 
 # Distribution DB details
 distribution_db_type: postgresql
@@ -45,9 +39,7 @@ distribution_db_name: distribution
 distribution_db_user: distribution
 distribution_db_password: password
 distribution_db_url: >-
-    {%- for item in groups['postgres_servers'] -%}
-        jdbc:postgresql://{{ hostvars[item]['ansible_host'] }}:5432/{{ distribution_db_name }}?sslmode=disable
-    {%- endfor -%}
+  jdbc:postgresql://{{ hostvars[groups['postgres_servers'][0]]['ansible_host'] }}:5432/{{ distribution_db_name }}?sslmode=disable
 
 # MissionControl DB details
 mc_db_type: postgresql
@@ -56,9 +48,7 @@ mc_db_name: mc
 mc_db_user: mc
 mc_db_password: password
 mc_db_url: >-
-    {%- for item in groups['postgres_servers'] -%}
-        jdbc:postgresql://{{ hostvars[item]['ansible_host'] }}:5432/{{ mc_db_name }}?sslmode=disable
-    {%- endfor -%}
+  jdbc:postgresql://{{ hostvars[groups['postgres_servers'][0]]['ansible_host'] }}:5432/{{ mc_db_name }}?sslmode=disable
 
 # Postgresql users and databases/schemas
 db_users:
