--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
@@ -1,6 +1,3 @@
-- debug:
-    msg: "Performing installation of Artifactory version : {{ artifactory_version }} "
-
 - name: Install prerequisite packages
   include_tasks: "{{ ansible_os_family }}.yml"
 
@@ -70,7 +67,10 @@
 
 - name: Copy untar directory to artifactory home
   become: yes
-  command: "cp -r {{ artifactory_untar_home }}/. {{ artifactory_home }}"
+  copy:
+    src: "{{ artifactory_untar_home }}/"
+    dest: "{{ artifactory_home }}"
+    remote_src: yes
   when: not app_dir_check.stat.exists
 
 - name: Create required directories
@@ -87,21 +87,22 @@
     - "{{ artifactory_home }}/var/etc/security/"
     - "{{ artifactory_home }}/var/etc/artifactory/info/"
 
-- name: Check if systemyaml exists
+- name: Check if system.yaml exists
   become: yes
   stat:
     path: "{{ artifactory_home }}/var/etc/system.yaml"
   register: systemyaml
 
-- name: Configure systemyaml
+- name: Configure system.yaml
   become: yes
   template:
     src: "{{ artifactory_system_yaml_template }}"
     dest: "{{ artifactory_home }}/var/etc/system.yaml"
+    mode: 0644
   when:
     - artifactory_systemyaml is defined
     - artifactory_systemyaml|length > 0
-    - artifactory_systemyaml_override or (not systemyaml.stat.exists) 
+    - artifactory_systemyaml_override or (not systemyaml.stat.exists)
   notify: restart artifactory
 
 - name: Configure master key
@@ -118,6 +119,7 @@
   template:
     src: installer-info.json.j2
     dest: "{{ artifactory_home }}/var/etc/artifactory/info/installer-info.json"
+    mode: 0644
   notify: restart artifactory
 
 - name: Configure binary store
@@ -125,6 +127,7 @@
   template:
     src: binarystore.xml.j2
     dest: "{{ artifactory_home }}/var/etc/artifactory/binarystore.xml"
+    mode: 0644
   when:
     - artifactory_binarystore is defined
     - artifactory_binarystore | length > 0
@@ -135,6 +138,7 @@
   template:
     src: artifactory.lic.j2
     dest: "{{ artifactory_home }}/var/etc/artifactory/artifactory.lic"
+    mode: 0644
   when:
     - artifactory_single_license is defined
     - artifactory_single_license|length > 0
@@ -145,6 +149,7 @@
   template:
     src: artifactory.cluster.license.j2
     dest: "{{ artifactory_home }}/var/etc/artifactory/artifactory.cluster.license"
+    mode: 0644
   when:
    - artifactory_licenses is defined
    - artifactory_licenses|length > 0
@@ -170,7 +175,7 @@
 
 - name: Create artifactory service
   become: yes
-  shell: "{{ artifactory_home }}/app/bin/installService.sh"
+  command: "{{ artifactory_home }}/app/bin/installService.sh"
   args:
     creates: "{{ artifactory_service_file }}"
 
