--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/meta/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/meta/main.yml
@@ -1,16 +1,27 @@
+---
+dependencies: []
+
 galaxy_info:
   author: "JFrog Maintainers Team <installers@jfrog.com>"
   description: "This role installs NGINX for artifactory. This role is automatically called by the artifactory role and isn't intended to be used separately."
   company: JFrog
-
   issue_tracker_url: "https://github.com/jfrog/JFrog-Cloud-Installers/issues"
-
   license: license (Apache-2.0)
-
   min_ansible_version: 2.9
-
+  platforms:
+    - name: EL
+      versions:
+        - 7
+        - 8
+    - name: Ubuntu
+      versions:
+        - xenial
+        - bionic
+        - focal
+    - name: Debian
+      versions:
+        - stretch
+        - buster
   galaxy_tags:
     - artifactory
     - jfrog
-
-dependencies: []
