--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/upgrade-elasticsearch.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/upgrade-elasticsearch.yml
@@ -8,6 +8,7 @@
         echo "$(ps -ef | grep -v grep | grep ${curr_ps_id})"
         kill -9 ${curr_ps_id}
     done
+  changed_when: false
 
 - name: Find searchguard bundle for removal
   become: yes
@@ -41,9 +42,9 @@
   file:
     path: "{{ mc_es_home }}"
     state: directory
-    mode: 0755
     owner: elasticsearch
     group: elasticsearch
+    mode: 0755
 
 - name: Find elasticsearch package
   become: yes
@@ -61,7 +62,6 @@
 
 - name: Extract elasticsearch package
   become: yes
-  ignore_errors: yes
   unarchive:
     src: "{{ mc_elasticsearch_package }}"
     dest: "{{ mc_es_home }}"
@@ -83,6 +83,7 @@
     dest: "{{ mc_es_conf_base }}/elasticsearch.yml"
     owner: elasticsearch
     group: elasticsearch
+    mode: 0644
   when: unarchive_result.extract_results.rc | default(128) == 0
 
 - name: Create empty unicast_hosts.txt file
@@ -90,16 +91,16 @@
   file:
     path: "{{ mc_es_conf_base }}/unicast_hosts.txt"
     state: touch
-    mode: 0644
     owner: elasticsearch
     group: elasticsearch
+    mode: 0644
 
 - name: Upgrade searchguard plugin
   import_tasks: upgrade-searchguard.yml
 
 - name: Start elasticsearch
   become: yes
-  shell: "su -c '{{ mc_es_script_path }}/elasticsearch -d' elasticsearch"
+  command: "su -c '{{ mc_es_script_path }}/elasticsearch -d' elasticsearch"
   environment:
     ES_JAVA_HOME: "{{ mc_es_java_home }}"
     ES_PATH_CONF: "{{ mc_es_conf_base }}/"
