--- a/Ansible/ansible_collections/jfrog/platform/roles/postgres/defaults/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/postgres/defaults/main.yml
@@ -1,4 +1,3 @@
----
 # Default version of Postgres server to install.
 postgres_version: 13
 
@@ -93,3 +92,14 @@ postgres_allowed_hosts:
       address: "0.0.0.0/0",
       method: "trust",
     }
+
+# PostgreSQL misc settings
+postgresql_bin_path: "{{ default_postgresql_bin_path }}"
+postgresql_config_path: "{{ default_postgresql_config_path }}"
+postgresql_data_dir: "{{ default_postgresql_data_dir }}"
+postgresql_daemon: "{{ default_postgresql_daemon }}"
+postgresql_external_pid_file: "{{ default_postgresql_external_pid_file }}"
+
+postgres_apt_key_id: "{{ default_postgres_apt_key_id }}"
+postgres_apt_key_url: "{{ default_postgres_apt_key_url }}"
+postgres_apt_repository_repo: "{{ default_postgres_apt_repository_repo }}"
