Adding SELinux context configuration for bin directory

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/RedHat.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/RedHat.yml
@@ -3,3 +3,9 @@
   yum:
     name: net-tools
     state: present
+
+- name: Configure SELinux context 
+  sefcontext:
+    target: "{{jfrog_home_directory}}/artifactory/app/bin(/.*)?"
+    setype: bin_t
+    state: present
