--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
@@ -174,9 +174,10 @@
   notify: restart artifactory
 
 - name: Run restore context to reload selinux
+  become: yes
   shell: restorecon -R -v {{jfrog_home_directory}}/artifactory/app/bin
   when: ansible_distribution == 'RedHat'
-  
+
 - name: Create artifactory service
   become: yes
   command: "{{ artifactory_home }}/app/bin/installService.sh"
